trabajo en el navbar y menu lateral

--- a/ANM_ls_Web/src/app/app.component.html
+++ b/ANM_ls_Web/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<app-header></app-header>
+<app-menu-lateral></app-menu-lateral>
+<app-index></app-index>
+<app-nuevo-anime></app-nuevo-anime>
+
+<app-footer></app-footer>
