--- a/ANM_ls_Web/src/app/login/login.component.html
+++ b/ANM_ls_Web/src/app/login/login.component.html
@@ -1,1 +1,8 @@
-<p>login works!</p>
+<div class="center-container">
+    <div class="centered-div">
+        <h3>LogIn</h3>
+        <input  placeholder="Correo" class="form-control" type="email">
+        <input  placeholder="Contraseña" class="form-control" type="password">
+        <button class="form-control">Ingresar</button>
+    </div>
+</div>
