--- a/ANM_ls_Web/src/app/nuevo-anime/nuevo-anime.component.html
+++ b/ANM_ls_Web/src/app/nuevo-anime/nuevo-anime.component.html
@@ -7,6 +7,18 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
+          <div class="rating" id="calificacion">
+            <input value="5" name="rate" id="star5" type="radio">
+            <label title="text" for="star5"></label>
+            <input value="4" name="rate" id="star4" type="radio">
+            <label title="text" for="star4"></label>
+            <input value="3" name="rate" id="star3" type="radio" checked="">
+            <label title="text" for="star3"></label>
+            <input value="2" name="rate" id="star2" type="radio">
+            <label title="text" for="star2"></label>
+            <input value="1" name="rate" id="star1" type="radio">
+            <label title="text" for="star1"></label>
+          </div>         
             <label for="nombre">Nombre:</label>
             <input id="nombre" type="text" class="form-control">
             <label for="subNombre">Nombre Alterno:</label>
